# MathEvalLib_NDev08

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/MathEvalLib_NDev08/: MathEvalLib.py  MathFunctions.py  __init__.py
tests/: test_addition_subtraction.py  test_multiplication_division.py  test_order_of_operations.py
